--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     background-color: #212529;
     color: white;
     padding: 25px 60px;
+    margin-bottom: 30px;
 }
 
 .cart{
@@ -43,5 +44,48 @@ body {
     color: white;
     padding: 3px;
     border-radius: 3px;
+}
 
+/**
+* ! Shop Items Styles are defined here
+**/
+
+.shop{
+    display: grid;
+    grid-template-columns: repeat(4, 223px);
+    gap: 30px;
+    justify-self: center;
+}
+
+.item{
+    border: 2px solid #212529;
+    border-radius: 4px;
+}
+
+.details{
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    gap: 10px;
+}
+
+.price-quantity{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.buttons{
+    display:flex;
+    flex-direction: row;
+    gap: 8px;
+}
+
+.bi-dash-lg{
+    color: red;
+}
+
+.bi-plus-lg{
+    color: green;
 }
