--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,11 @@ i{
     cursor:pointer;
 }
 
+a{
+    text-decoration: none;
+    color:white
+}
+
 /**
 * ! Navbar Styles are defined here
 **/
@@ -104,4 +109,66 @@ i{
 
 .bi-plus-lg{
     color: green;
+}
+
+
+/**
+! Cart Styles are defined here
+**/
+
+.text-center{
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.homeBtn{
+    background-color: #212529;
+    color: white;
+    padding: 6px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.bi-x-lg{
+    color: red;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.shopping-cart{
+    display: grid;
+    grid-template-columns: repeat(1,320px);
+    justify-content: center;
+    gap: 15px;
+}
+
+/**
+! Cart Item Styles are defined here
+**/
+
+.cart-item{
+    border: 2px solid black;
+    border-radius: 5px;
+    display: flex;
+}
+
+.title-price-x{
+    width: 195px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.title-price{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.cart-item-price{
+    background-color: #212529;
+    color: white;
+    border-radius: 4px;
+    padding: 3px 6px;
 }
